tests/fixtures/autofixable/bad/name_collision.py
import requests

def get_data():
    response = "some other response"
    result = requests.get("https://example.com")
    return result
